--- a/assets/style.css
+++ b/assets/style.css
@@ -19,13 +19,13 @@ button{
     background: black;
     font-family: 'Roboto', sans-serif;
     color: white;
+    padding: 10px;
     font-size: 24px;
     cursor: pointer;
 }
 *{
     outline: none;
     border-radius: 10px;
-    margin: 5px;
 }
 
 .container{
@@ -94,7 +94,37 @@ button{
     grid-column-end: 6;
     grid-row-start: 4;
 }
-
+.time_container{
+    width: 100%; height: 100vh;
+    background: white;
+    position: absolute;
+    z-index: 1;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center ;
+    top: -1080px;
+    transition: 1s;
+}
+.divBtn{
+    width: 312px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;   
+}
+.divBtn>button{
+    margin: 3px;
+}
+.cronometro{
+    font-size: 10rem;
+}
+.btnPause{
+    width: 312px;
+}
+.btnDel, .btnSave{
+    width: 150px;
+}
 @media (max-width: 1280px) 
 {
     .container{
