--- a/assets/style.css
+++ b/assets/style.css
@@ -31,19 +31,22 @@ button{
 .container{
     display: grid;
     grid-template-columns: repeat(9, 1fr);
-    grid-auto-rows: 150px 400px 100px 20px
+    grid-auto-rows: 100px 400px 100px 20px
 }
 .switch{
     grid-column-start: 9;
 }
 .display{
-    grid-column-start: 4;
-    grid-column-end: 7;
-    grid-row-start: 1;
+    grid-column-start: 3;
+    grid-column-end: 8;
+    grid-row-start: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-self: end;
+    align-self: center;
+}
+.btn_display{
+    display: block;
 }
 .keyboard ul li{
     width: 100px;
@@ -63,6 +66,7 @@ button{
     transform: scale(1.2);
 }
 .keyboard{
+    display: none;
     grid-column-start: 4;
     grid-column-end: 7;
     grid-row-start: 2;
@@ -74,11 +78,14 @@ button{
     justify-content: center;
 }
 .display ul li{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     font-size: 2rem;
     line-height: 140px;
 }
 .display ul li span{
-    font-size: 4rem;
+    font-size: 6rem;
 }
 .start{
     margin-top: 25px;
@@ -134,6 +141,7 @@ button{
         grid-column-start: 7;
     }
     .display{
+        align-self: end;
         grid-column-start: 3;
         grid-column-end: 6;
     }
@@ -161,6 +169,7 @@ button{
         grid-column-start: 5;
     }
     .display{
+        align-self: end;
         grid-column-start: 2;
         grid-column-end: 5;
     }
@@ -187,12 +196,19 @@ button{
         grid-column-start: 4;
     }
     .display{
+        align-self: end;
         grid-column-start: 1;
         grid-column-end: 4;
+        grid-row-start: 1;
+    }
+    .btn_display{
+        display: none;
     }
     .keyboard{
+        display: block;
         grid-column-start: 1;
         grid-column-end: 4;
+        grid-row-start: 2;
     }
     .start{
         grid-column-start: 1;
@@ -210,18 +226,24 @@ button{
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: 80px 320px 70px 20px
 
-
     }
     .switch{
         grid-column-start: 3;
     }
     .display{
+        grid-row-start: 1;
+        align-self: end;
         grid-column-start: 1;
         grid-column-end: 4;
     }
+    .btn_display{
+        display: none;
+    }
     .keyboard{
+        display: block;
         grid-column-start: 1;
         grid-column-end: 4;
+        grid-row-start: 2;
     }
     .start{
         grid-column-start: 1;
