--- a/assets/animations.css
+++ b/assets/animations.css
@@ -188,3 +188,37 @@ svg:hover{
         opacity: 0;
 }
 }
+
+
+.slide-out-top {
+	-webkit-animation: slide-out-top 1.0s ;
+	        animation: slide-out-top 1.0s ;
+}
+
+
+@-webkit-keyframes slide-out-top {
+        0% {
+          -webkit-transform: translateY(0);
+                  transform: translateY(0);
+          opacity: 1;
+        }
+        100% {
+          -webkit-transform: translateY(-1000px);
+                  transform: translateY(-1000px);
+          opacity: 0;
+        }
+      }
+      @keyframes slide-out-top {
+        0% {
+          -webkit-transform: translateY(0);
+                  transform: translateY(0);
+          opacity: 1;
+        }
+        100% {
+          -webkit-transform: translateY(-1000px);
+                  transform: translateY(-1000px);
+          opacity: 0;
+        }
+      }
+      
+      
